@@ -7,8 +7,6 @@ import java.nio.charset.StandardCharsets;
 import java.text.ParseException;
 import java.util.zip.DataFormatException;
 
-import javax.xml.bind.DatatypeConverter;
-
 /**
  * Created by Joel Haasnoot on 17/10/15.
  */
@@ -19,7 +17,7 @@ public class TicketUtils {
     }
 
     public static String fromBase64(String base64) {
-        byte[] encodedHelloBytes = DatatypeConverter.parseBase64Binary(base64);
+        byte[] encodedHelloBytes = Base64.getDecoder().decode(base64);
         return new String(encodedHelloBytes, StandardCharsets.UTF_8);
     }
     public static byte[] fromBase64AsBytes(String base64) {
